--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -148,7 +148,7 @@ Quick">
 
 	<div class="article-share" id="share">
 	
-	  <div data-url="http://abeljoo.com/hello-world/" data-title="Hello World | Abel·朱嘉俊" data-tsina="null" class="share clearfix">
+	  <div data-url="http://abeljoo.com/hello-world/" data-title="Hello World | Abel·朱嘉俊" data-tsina="theworldsong" class="share clearfix">
 	  </div>
 	
 	</div>
@@ -213,7 +213,7 @@ Quick">
 	
 	
 	<section class="info">
-		<p> Hello ,I&#39;m Larry Page in Google. <br/>
+		<p> Keep calm and carry on. <br/>
 			This is my blog,believe it or not.</p>
 	</section>
 	 
