--- a/index.html
+++ b/index.html
@@ -139,7 +139,7 @@
 	
 	
 	<section class="info">
-		<p> Hello ,I&#39;m Larry Page in Google. <br/>
+		<p> Keep calm and carry on. <br/>
 			This is my blog,believe it or not.</p>
 	</section>
 	 
