--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -219,18 +219,18 @@ Quick">
 	 
 	<div class="social-font" class="clearfix">
 		
-		<a href="http://weibo.com/http://weibo.com/836579558" target="_blank" class="icon-weibo" title="微博"></a>
+		<a href="http://weibo.com/836579558" target="_blank" class="icon-weibo" title="微博"></a>
 		
 		
-		<a href="https://github.com/https://github.com/AbelJoo" target="_blank" class="icon-github" title="github"></a>
-		
-		
-		
+		<a href="https://github.com/AbelJoo" target="_blank" class="icon-github" title="github"></a>
 		
 		
 		
 		
-		<a href="https://www.zhihu.com/people/http://www.zhihu.com/people/Abel_Joo" target="_blank" class="icon-zhihu" title="知乎"></a>
+		
+		
+		
+		<a href="https://www.zhihu.com/people/Abel_Joo" target="_blank" class="icon-zhihu" title="知乎"></a>
 		
 		
 		
