--- a/hello-world/index.html
+++ b/hello-world/index.html
@@ -135,10 +135,10 @@ Quick">
 <nav class="article-nav clearfix">
  
  <div class="prev" >
- <a href="/wen2/" title="Hello World">
+ <a href="/wen2/" title="55">
   <strong>上一篇：</strong><br/>
   <span>
-  Hello World</span>
+  55</span>
 </a>
 </div>
 
