--- a/index.html
+++ b/index.html
@@ -1,3 +1,9 @@
-<head>
-<meta http-equiv="refresh" content="1;url=http://www.jianshu.com/users/12bbae6f9abc/latest_articles">
-</head>
+<html>
+  <head>
+    <meta http-equiv="refresh" content="1;url=http://www.jianshu.com/users/12bbae6f9abc/latest_articles">
+      <title>稍等片刻</title>
+  </head>
+  <body>
+    <p>稍等片刻, 马上就好 →_→ </p>
+  </body>
+</html>
