--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 ---
 layout: page
-description: "当你停止创造，你的才能就不再重要，剩下的只有品味。<br>品味会排斥其他人，让你变得更狭隘。<br>所以，要创造。<br>ENTP"
+description: "当你停止创造，你的才能就不再重要，剩下的只有品味。<br>品味会排斥其他人，让你变得更狭隘。<br>所以，要创造。<br>\> ENTP"
 ---
 
 {% for post in paginator.posts %}
